--- a/style.css
+++ b/style.css
@@ -108,19 +108,35 @@ body {
     font-size: 22px;
 }
 
-.show-area .card-grid .card .btn {
+.show-area .card-grid .card .view-more-btn{
     text-align: center;
     color: white;
     background-color: rgb(161, 39, 39);
     height: 36px;
-    width: 105px;
+    /* width: 105px; */
     font-size: 19px;
     border-radius: 6px;
     margin-top: 30px;
+    padding: 6px 11px;
+
 
 }
 
-.show-area .card-grid .card .btn:hover {
+.show-area .card-grid .card .view-more-btn:hover {
     cursor: pointer;
     background-color: red;
+}
+
+.recipe-box{
+    overflow: hidden;
+    border-radius: 15px;
+    height: 50%;
+    width: 50%;
+    background-color: #454135;
+    color: white;
+    z-index: 10;
+    position: fixed;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top:50%;
 }
