--- a/style.css
+++ b/style.css
@@ -128,9 +128,11 @@ body {
 }
 
 .recipe-box{
+    display: flex;
+    flex-direction: column;
     overflow: hidden;
     border-radius: 15px;
-    height: 50%;
+    /* height: 50%; */
     width: 50%;
     background-color: #454135;
     color: white;
@@ -140,3 +142,28 @@ body {
     left: 50%;
     top:50%;
 }
+.recipe-box .ingredients-container{
+    margin: 8px 37px;
+}
+.recipe-box .ingredients-container h3{
+    margin-top: 5px;
+}
+.recipe-box .ingredients-container li{
+    margin-top: 5px;
+}
+.recipe-box .recipe-box-btn{
+    height: 29px;
+    width: 31px;
+    position: relative;
+    left: 626px;
+    top: 18px;
+}
+
+.recipe-box .recipe-box-btn:hover{
+ cursor: pointer;
+}
+/* .recipe-box .ingredients-container .recipe-box-btn i{
+    height: 20px;
+    display: block;
+    width: 20px;
+} */
